Fix gcal number spacing on index.

--- a/css/allshapes.css
+++ b/css/allshapes.css
@@ -606,7 +606,7 @@
   letter-spacing:-.04em;
   text-align: center;
   margin: 0 auto;
-  padding: 38px 0px 0 12px;
+  padding:6px 0 0 12px;
   z-index: 20;
   position: relative;
 }
